[metadata]
name = edna
version = 1.0rc1
author = ESRF
author_email = svensson@esrf.fr
description = EDNA-MX
long_description = file: README.txt
long_description_content_type = text/markdown
license = GPL2
url = https://github.com/olofsvensson/edna-mx
project_urls =
    Source = https://github.com/olofsvensson/edna-mx
    Documentation = https://github.com/olofsvensson/edna-mx
    Tracker = https://github.com/olofsvensson/edna-mx/issues
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GPL2
    Programming Language :: Python :: 2

[options]
package_dir=
	=kernel/src
packages=find:
python_requires = >=2.7
install_requires =
    suds>=1.1
    pytango>=9.3
    requests>=2.28
    h5py
    pillow
    fabio
    scipy
    distro
    matplotlib
    pyicat_plus

[options.packages.find]
where=.

[options.package_data]
* = *.xml

